# clamp_to

./: Cargo.toml  README.md  build.rs
generator/: generate.sh
generator/src/: main.rs
src/: clamp.rs  clamp_16.rs  clamp_32.rs  clamp_64.rs  clamp_to.rs  lib.rs  main.rs
src/cast_test/: Cargo.toml
