[package]
name = "clamp_to"
version = "0.2.2"
edition = "2021"
authors = ["Michael Conrad"]
license = "MIT"
description = "Clamp integer and float values to the values that fit within both the original number type and the receiving type"
homepage = "https://github.com/mmitton/clamp_to"
repository = "https://github.com/mmitton/clamp_to"
readme = "README.md"

[dependencies]
